--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "angular-cookies": "^1.3.36",
     "angular-resource": "^1.3.36",
     "angular-route": "^1.3.36",
-    "jquery": "^2.1.1"
+    "jquery": "^2.1.1",
+    "lodash": "^2.4.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.8",
@@ -87,10 +88,13 @@
   "scripts": {
     "cameras": "gulp cameras",
     "build": "gulp build",
+    "build-prod": "gulp prod",
     "dev": "gulp",
-    "postinstall": "bower install && gulp build",
-    "prod": "gulp prod",
+    "bootstrap": "npm install && bower install",
+    "start": "gulp prod && gulp server",
+    "postinstall": "gulp build",
     "protractor": "gulp protractor",
-    "test": "node_modules/karma/bin/karma start test/karma.conf.js --single-run"
+    "test": "node_modules/karma/bin/karma start test/karma.conf.js",
+    "test-single": "node_modules/karma/bin/karma start test/karma.conf.js --single-run"
   }
 }
