Remove bower dependencies

--- a/bower.json
+++ b/bower.json
@@ -23,8 +23,5 @@
     "tests",
     "public/libs"
   ],
-  "dependencies": {
-    "modernizr": "~2.7.2",
-    "bootstrap": "~3.3.1"
-  }
+  "dependencies": {}
 }
