--- a/package.json
+++ b/package.json
@@ -33,15 +33,23 @@
     "angular-cookies": "^1.3.36",
     "angular-resource": "^1.3.36",
     "angular-route": "^1.3.36",
+    "axios": "^0.16.2",
     "jquery": "^2.1.1",
     "lodash": "^2.4.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.8",
-    "bower": "^1.3.12",
+    "babel-eslint": "^7.2.3",
     "browserify": "^7.0.3",
     "browserify-ngannotate": "^0.5.0",
     "browserify-shim": "^3.8.2",
+    "eslint": "^4.1.1",
+    "eslint-config-google": "^0.8.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "gulp": "^3.8.6",
     "gulp-angular-templatecache": "^1.5.0",
     "gulp-concat": "^2.2.0",
@@ -52,7 +60,7 @@
     "gulp-minify-css": "^0.3.11",
     "gulp-minify-html": "^0.1.7",
     "gulp-protractor": "0.0.12",
-    "gulp-sass": "^1.2.4",
+    "gulp-sass": "^2.3.2",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.0.2",
     "jasmine-core": "^2.1.2",
@@ -63,6 +71,7 @@
     "karma-jasmine": "^0.3.1",
     "protractor": "^1.5.0",
     "run-sequence": "^1.0.2",
+    "serve": "^6.0.1",
     "superstatic": "^1.1.6",
     "vinyl-source-stream": "^1.0.0",
     "xml2json": "^0.5.1"
@@ -96,5 +105,9 @@
     "protractor": "gulp protractor",
     "test": "node_modules/karma/bin/karma start test/karma.conf.js",
     "test-single": "node_modules/karma/bin/karma start test/karma.conf.js --single-run"
+  },
+  "eslintConfig": {
+    "extends": "standard",
+    "parser": "babel-eslint"
   }
 }
