--- a/package.json
+++ b/package.json
@@ -33,48 +33,50 @@
     "angular-cookies": "^1.3.36",
     "angular-resource": "^1.3.36",
     "angular-route": "^1.3.36",
-    "axios": "^0.16.2",
-    "jquery": "^2.1.1",
-    "lodash": "^2.4.1"
+    "axios": "^0.17.1",
+    "jquery": ">3.0.0",
+    "jshint": "^2.9.5",
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.8",
-    "babel-eslint": "^7.2.3",
-    "browserify": "^7.0.3",
-    "browserify-ngannotate": "^0.5.0",
+    "babel-eslint": "^8.2.1",
+    "browserify": "^15.2.0",
+    "browserify-ngannotate": "^2.0.0",
     "browserify-shim": "^3.8.2",
-    "eslint": "^4.1.1",
-    "eslint-config-google": "^0.8.0",
+    "eslint": "^4.16.0",
+    "eslint-config-google": "^0.9.1",
     "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.0",
-    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^4.2.3",
+    "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "gulp": "^3.8.6",
-    "gulp-angular-templatecache": "^1.5.0",
+    "gulp-angular-templatecache": "^2.2.0",
     "gulp-concat": "^2.2.0",
-    "gulp-if": "^1.2.5",
-    "gulp-jshint": "~1.5.5",
-    "gulp-karma": "0.0.4",
-    "gulp-load-plugins": "^0.8.0",
-    "gulp-minify-css": "^0.3.11",
-    "gulp-minify-html": "^0.1.7",
-    "gulp-protractor": "0.0.12",
-    "gulp-sass": "^2.3.2",
-    "gulp-streamify": "0.0.5",
-    "gulp-uglify": "^1.0.2",
+    "gulp-eslint": "^4.0.1",
+    "gulp-if": "^2.0.2",
+    "gulp-jshint": "^2.1.0",
+    "gulp-karma": "0.0.5",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-minify-html": "^1.0.6",
+    "gulp-protractor": "^4.1.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-streamify": "^1.0.2",
+    "gulp-uglify": "^3.0.0",
     "jasmine-core": "^2.1.2",
-    "jshint-stylish": "~0.1.5",
-    "karma": "^0.12.28",
+    "jshint-stylish": "^2.2.1",
+    "karma": "^2.0.0",
     "karma-bro": "^0.11.1",
-    "karma-chrome-launcher": "^0.1.5",
-    "karma-jasmine": "^0.3.1",
-    "protractor": "^1.5.0",
-    "run-sequence": "^1.0.2",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.1",
+    "protractor": "^5.2.2",
+    "run-sequence": "^2.2.1",
     "serve": "^6.0.1",
-    "superstatic": "^1.1.6",
-    "vinyl-source-stream": "^1.0.0",
-    "xml2json": "^0.5.1"
+    "superstatic": "^5.0.1",
+    "vinyl-source-stream": "^2.0.0",
+    "xml2json": "^0.11.0"
   },
   "engines": {
     "node": "0.10.35"
