--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "eslint-config-google": "^0.9.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^4.2.3",
+    "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "gulp": "^3.8.6",
@@ -79,7 +79,7 @@
     "xml2json": "^0.11.0"
   },
   "engines": {
-    "node": "0.10.35"
+    "node": ">=6.9.0"
   },
   "homepage": "https://github.com/theponti/facade-angular",
   "keywords": [
